{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 159,
  "lineage": "3f39d3a2-4dd9-346d-4273-453dcae7504b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "roga5fjqxysefpmcct40w2ricb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/vm-publicip",
                "subnet_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "example-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "example-resources"
          },
          "dependencies": [
            "azurerm_public_ip.host_public_ip",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "location": "eastus",
            "name": "websubnet-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "223.236.74.85",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.example"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "223.236.74.85",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.example"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "websubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "223.236.74.85",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "host_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/vm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.135.66.233",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vm-publicip",
            "resource_group_name": "example-resources",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/example-websubnet",
            "name": "example-websubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "network_security_group_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "subnet_id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "950f8c8b-be30-4224-bd82-14fdab722811",
            "id": "/subscriptions/ef0c35ea-c4de-4702-ab76-1ced2eaf81eb/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network",
            "location": "eastus",
            "name": "example-network",
            "resource_group_name": "example-resources"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}